# Polymarket-Tickscope

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
.cache/clangd/index/: BinanceFeed.cpp.71093FDA34A470D7.idx  BinanceFeed.hpp.3D7172601819EF08.idx  BookState.cpp.4D5C49D309F73F3C.idx  BookState.hpp.3DE6FAA798F83CB8.idx  BotConfig.hpp.20CF3D8BB8B7C29B.idx  BotDiscovery.cpp.54F8001F15E0FDD5.idx  BotDiscovery.hpp.8B15AA048C49257C.idx  BtcJournal.hpp.63DCA65891E2CA1B.idx  BtcTick.hpp.E1FD0F0C3E6487BB.idx  FeedHandler.cpp.C8E3CDA044AAB9C0.idx  FeedHandler.hpp.A6BB2E14A6F96BD9.idx  Feedhandler.cpp.693AA45434714608.idx  Feedhandler.hpp.FCF9FEAC1F29EA66.idx  MarketDiscovery.cpp.82F031E00A1FF2E9.idx  MarketDiscovery.hpp.0F24582D7EB60F91.idx  OrderBook.cpp.6738086ABF32B636.idx  OrderBook.hpp.EA6BF19992D4BD2B.idx  OrderGateway.cpp.79FFD94BFD82E2D5.idx  OrderGateway.hpp.24EF586FCC15F35B.idx  RingBuffer.hpp.D5C0A503D1FDB671.idx  StrategyEngine.hpp.0E8860D920373A6B.idx  Tick.hpp.10A6FF8D54442DAF.idx  Tickerplant.cpp.DED4B9DA2142EFA8.idx  Tickerplant.hpp.3063281A844C7C9F.idx  WebSocketClient.cpp.D02635B6A59B76B3.idx  WebSocketClient.hpp.57A9A8DF4670B439.idx  main.cpp.0C4BD43902DB2625.idx  main.cpp.6598D254D9AF7B50.idx  main.cpp.A9D093D5648777F9.idx  test_feedhandler.cpp.968A358F624473E2.idx  test_orderbook.cpp.37F6A8FE5ED5FC05.idx  test_ringbuffer.cpp.F61792C0BB8F0E29.idx  test_tickerplant.cpp.BC31BA265B893634.idx  version.hpp.17E3C6A7F3FEE6AC.idx
.github/workflows/: ci.yml
data/: espn_nhl_401874173.csv  polymarket_20260607_0130.parquet
data/samples/: README.md
data/samples/sports/: espn_soccer_fifa.world_760442.csv  espn_soccer_fifa.world_760443.csv  espn_soccer_fifa.world_760444.csv  espn_soccer_fifa.world_760445.csv  market_metadata_worldcup.csv  polymarket_20260607_0145.parquet
deploy/binance/: binance-harvester.service
deploy/bot/: polymarket-bot.env.example  polymarket-bot.service
deploy/coinbase/: coinbase-harvester.service
deploy/harvester/: polymarket-harvester.service
docs/: ARCHITECTURE.md  BINANCE_SETUP.md  BOT_SETUP.md  CAPTURE_RUNBOOK.md  COINBASE_SETUP.md  FINDINGS.md
docs/adr/: 0001-lock-free-mpsc-ring-buffer.md  0002-shared-system-clock-for-cross-feed-joins.md  0003-focused-market-filter-to-prevent-oom.md  0004-gamma-api-pagination-descending-order.md  0005-data-retention-policy.md
include/polymarket/: version.hpp
include/polymarket/core/: BtcTick.hpp  Tick.hpp
include/polymarket/feedhandler/: Feedhandler.hpp
include/polymarket/gateway/: MarketDiscovery.hpp  WebSocketClient.hpp
include/polymarket/memory/: RingBuffer.hpp
include/polymarket/rdb/: OrderBook.hpp
include/polymarket/tickerplant/: Tickerplant.hpp
research/: requirements.txt
research/backtest/: __init__.py  data_loader.py  engine.py  fills.py  metrics.py  optimizer.py  run_optimizer.py  types.py
research/backtest/strategies/: __init__.py  base.py  convergence_no.py
research/notebooks/: README.md  binance_lag_analysis.ipynb  bot_pnl_audit.ipynb  coinbase_lag_analysis.ipynb  event_lag_analysis.ipynb  oos_validation.ipynb  resolution_detector.ipynb  run_backtest.ipynb  run_optimizer.ipynb
research/scripts/: fetch_markets.py  resolution_detector.py  worldcup_lag_analysis.py
scripts/bot/: bot_daily_s3.sh
scripts/capture/: run_capture.sh
scripts/collectors/: betfair_collector.py  espn_collector.py  espn_nba_collector.py
scripts/harvester/: btc_to_parquet.py  hourly_flush.sh  local_tester.sh  log_to_parquet.py
src/: CMakeLists.txt
src/binance/: BinanceFeed.cpp  BinanceFeed.hpp  BtcJournal.hpp  CMakeLists.txt  main.cpp
src/bot/: BookState.cpp  BookState.hpp  BotConfig.hpp  BotDiscovery.cpp  BotDiscovery.hpp  CMakeLists.txt  FeedHandler.cpp  FeedHandler.hpp  OrderGateway.cpp  OrderGateway.hpp  StrategyEngine.hpp  main.cpp
src/coinbase/: BtcJournal.hpp  CMakeLists.txt  CoinbaseFeed.cpp  CoinbaseFeed.hpp  main.cpp
src/feedhandler/: CMakeLists.txt  Feedhandler.cpp
src/gateway/: CMakeLists.txt  MarketDiscovery.cpp  WebSocketClient.cpp
src/harvester/: CMakeLists.txt  main.cpp
src/rdb/: CMakeLists.txt  OrderBook.cpp
src/tickerplant/: CMakeLists.txt  Tickerplant.cpp
tests/: CMakeLists.txt  test_feedhandler.cpp  test_orderbook.cpp  test_ringbuffer.cpp  test_tickerplant.cpp
